# WebsiteMaatje

./: .replit  README.md  index.html  main.py  pyproject.toml  replit.md  script.js  style.css  tailwind.config.ts
.github/workflows/: azure-static-web-apps-blue-hill-0208d3d03.yml  azure-static-web-apps-proud-bush-0db7da503.yml  azure-static-web-apps-thankful-ocean-068e4cf10.yml  main_websitemaatje.yml
.local/state/replit/agent/design_reference/cb6e8bd7-b465-43ae-8729-629d37dbbc24/: 79588384-6efc-46d4-871f-a3dae0b79af1.html  a974359e-e4c9-4546-b0a7-4c45817ee4a8.html
.local/state/replit/agent/filesystem/: filesystem_state.json
client/src/: App.tsx  index.css
client/src/components/: about-section.tsx  about.tsx  contact-form.tsx  contact-section.tsx  footer.tsx  hero-section.tsx  hero.tsx  navigation.tsx  packages-section.tsx  packages.tsx  process-section.tsx  process.tsx
client/src/pages/: about.tsx  contact.tsx  home.tsx  package-details.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
