[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.3.0"
flask = ">=3.1.2"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"

[tool.poetry.dev-dependencies]
# Voeg hier je ontwikkelingsafhankelijkheden toe zoals pytest, black, enz.

[tool.poetry.packages]
# Dit geeft aan dat de rootmap van je project moet worden verpakt
# als onderdeel van je project. Je kunt het pad naar een specifieke map opgeven
# als je dat wilt.
include = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
